[package]
name = "ethercat_no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
edge-executor = { version = "0.3.0", default-features = false }
embassy-time = { version = "0.1.1", default-features = false }
ethercrab = { git = "https://github.com/ethercrab-rs/ethercrab.git", version = "0.1.0", default-features = false }
libc = { version = "0.2.147", default-features = false }
libc-print = "0.1.21"
wee_alloc = "0.4.5"
worst-executor = "0.1.1"
